...
                        modifier = Modifier
                            .padding(12.dp)
                            .fillMaxWidth(),
                        horizontalAlignment = Alignment.CenterHorizontally
                    ) {
                        Icon(imageVector = Icons.Filled.Add, contentDescription = "Add")
                        Text(text = "Add a new workout")
                    }
                }
            }

            is SuggestionScreenState.BodyParts -> {
                BodyPartScreen(
...
